# taskman

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: style.css
client/src/: App.module.css  App.tsx  action-button.css
client/src/components/: ThemeToggle.module.css  Topbar.module.css  Topbar.tsx  icons.tsx
client/src/components/tasks/: TaskCard.tsx  TaskDetail.module.css  TaskDetail.tsx  TaskRow.tsx  Tasks.module.css  Tasks.shared.ts
client/src/lib/: api.ts  types.ts
client/src/views/: CardsView.tsx  DaysheetView.module.css  DaysheetView.tsx  FocusedView.tsx  TasksView.module.css  TasksView.tsx
server/: api.py  constants.py
server/services/: auth.py  daysheet.py  tasks.py  utils.py
server/tests/: test_api.py  test_auth.py  test_tasks.py  test_utils.py  utils.py
shell/: taskman.sh
taskman/: cli.py  config.py
taskman/commands/: daysheet.py  tasks.py  view.py
tests/: test_daysheet.py  test_tasks.py  test_view.py  test_web.py
web/: server.py
web/client/: app.js  index.html  style.css
web/client/scripts/: app.js  core.js  daysheet.js  sidebar.js  tasks.js  theme.js  topbar.js
web/client/styles/: base.css  calendar.css  daysheet.css  focused.css  sidebar.css  style.css  tasks.css  topbar.css
web/static/: app.js  index.html  style.css
