[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskman"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["flask>=3"]

[project.scripts]
taskman = "taskman.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskman*", "web*"]
